# xlnt

./: .gitbook.yaml  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  alignment_8hpp_source.html  annotated.html  border_8hpp_source.html  calculation__properties_8hpp_source.html  calendar_8hpp_source.html  cell_8hpp_source.html  cell__iterator_8hpp_source.html  cell__reference_8hpp_source.html  cell__type_8hpp_source.html  cell__vector_8hpp_source.html  classes.html  classxlnt_1_1alignment-members.html  classxlnt_1_1alignment.html  classxlnt_1_1bad__variant__access-members.html  classxlnt_1_1bad__variant__access.html  classxlnt_1_1border-members.html  classxlnt_1_1border.html  classxlnt_1_1border_1_1border__property-members.html  classxlnt_1_1border_1_1border__property.html  classxlnt_1_1calculation__properties-members.html  classxlnt_1_1calculation__properties.html  classxlnt_1_1cell-members.html  classxlnt_1_1cell.html  classxlnt_1_1cell__iterator-members.html  classxlnt_1_1cell__iterator.html  classxlnt_1_1cell__reference-members.html  classxlnt_1_1cell__reference.html  classxlnt_1_1cell__vector-members.html  classxlnt_1_1cell__vector.html  classxlnt_1_1color-members.html  classxlnt_1_1color.html  (+323 more)
.circleci/: config.yml  config_pr.yml  continue_config_in.yml  gcc14_cmake3.30.3.Dockerfile  gcc14_cmake3.31.4.Dockerfile  gcc7_cmake3.2.Dockerfile  gcc7_cmake3.9.5.Dockerfile  gcc7_cmake3.9.5_doxygen.Dockerfile  gcc_cmake_latest.Dockerfile  post_coverage_comment.sh  setup.sh
benchmarks/: CMakeLists.txt  spreadsheet-load.cpp  styles.cpp  writer.cpp
benchmarks/microbenchmarks/: CMakeLists.txt  double_to_string.cpp  string_to_double.cpp
cmake/: CopyRuntimeList.cmake  (+1 more)
source/: CMakeLists.txt
source/cell/: cell.cpp  cell_reference.cpp  comment.cpp  hyperlink.cpp  index_types.cpp  phonetic_run.cpp  rich_text.cpp  rich_text_run.cpp
source/detail/: binary.hpp  constants.cpp  constants.hpp  default_case.hpp  environment.hpp  limits.hpp  locale.cpp  locale.hpp  parsers.cpp  parsers.hpp  time.hpp  time_helpers.hpp  unicode.cpp  unicode.hpp  xlnt_config_impl.hpp
source/detail/cryptography/: aes.cpp  aes.hpp  base64.cpp  base64.hpp  cipher.hpp  compound_document.cpp  compound_document.hpp  encryption_info.cpp  encryption_info.hpp  hash.cpp  hash.hpp  sha.cpp  sha.hpp  value_traits.hpp  xlsx_crypto_consumer.cpp  xlsx_crypto_consumer.hpp  xlsx_crypto_producer.cpp  xlsx_crypto_producer.hpp
source/detail/header_footer/: header_footer_code.cpp  header_footer_code.hpp
source/detail/implementations/: cell_impl.cpp  cell_impl.hpp  conditional_format_impl.hpp  format_impl.hpp  hyperlink_impl.hpp  style_impl.hpp  stylesheet.hpp  workbook_impl.cpp  workbook_impl.hpp  worksheet_impl.hpp
source/detail/number_format/: number_formatter.cpp  number_formatter.hpp
source/detail/serialization/: archive.hpp  archive_factory.cpp  archive_factory.hpp  custom_value_traits.cpp  custom_value_traits.hpp  defined_name.hpp  excel_thumbnail.hpp  open_stream.cpp  open_stream.hpp  parsers.hpp  serialisation_helpers.cpp  serialisation_helpers.hpp  vector_streambuf.cpp  vector_streambuf.hpp  xls_consumer.cpp  xls_consumer.hpp  xls_producer.cpp  xls_producer.hpp  xlsx_consumer.cpp  xlsx_consumer.hpp  xlsx_producer.cpp  xlsx_producer.hpp  zip_builtin.cpp  zip_builtin.hpp  zip_minizip_ng.cpp  zip_minizip_ng.hpp  zstream.cpp  zstream.hpp
source/detail/utils/: error_helpers.cpp  error_helpers.hpp  features.hpp  string_helpers.cpp  string_helpers.hpp  string_helpers_impl.hpp
source/drawing/: spreadsheet_drawing.cpp
source/packaging/: ext_list.cpp  manifest.cpp  relationship.cpp  uri.cpp
source/styles/: alignment.cpp  border.cpp  color.cpp  conditional_format.cpp  fill.cpp  font.cpp  format.cpp  number_format.cpp  protection.cpp  style.cpp
source/utils/: date.cpp  datetime.cpp  exceptions.cpp  numeric.cpp  path.cpp  time.cpp  timedelta.cpp  variant.cpp
source/workbook/: named_range.cpp  streaming_workbook_reader.cpp  streaming_workbook_writer.cpp  workbook.cpp  worksheet_iterator.cpp
source/worksheet/: cell_iterator.cpp  cell_vector.cpp  header_footer.cpp  page_margins.cpp  page_setup.cpp  phonetic_pr.cpp  range.cpp  range_iterator.cpp  range_reference.cpp  selection.cpp  sheet_protection.cpp  worksheet.cpp
tests/: CMakeLists.txt  runner.cpp
tests/cell/: cell_test_suite.cpp  hyperlink_test_suite.cpp  index_types_test_suite.cpp  rich_text_test_suite.cpp
tests/data/: 10_comments_hyperlinks_formulae.xlsx  13_custom_heights_widths.xlsx  3_default.xlsx  4_every_style.xlsx  Issue18_defined_name_with_workbook_scope.xlsx  Issue6_google_missing_workbookView.xlsx  Issue735_wrong_count.xlsx  book1.xls  issue109_noncompliant_relations.xlsx  issue90_debug_test_file.xlsx
tests/detail/: numeric_util_test_suite.cpp  parser_test_suite.cpp
tests/drawing/: drawing_test_suite.cpp
tests/helpers/: assertions.hpp  path_helper.hpp  temporary_directory.hpp  temporary_file.hpp  test_suite.hpp  timing.hpp  xml_helper.hpp
tests/helpers/internal/: xml_helper.hpp
tests/internal/: base64_test_suite.cpp  format_impl_test_suite.cpp  helper_test_suite.cpp  locale_helpers.hpp  numeric_util_test_suite.cpp  parser_test_suite.cpp  serialization_test_suite.cpp  string_test_suite.cpp  unicode_test_suite.cpp  zip_backend_test_suite.cpp
tests/styles/: alignment_test_suite.cpp  color_test_suite.cpp  conditional_format_test_suite.cpp  fill_test_suite.cpp  font_test_suite.cpp  format_test_suite.cpp  number_format_test_suite.cpp  protection_test_suite.cpp  style_test_suite.cpp
tests/utils/: datetime_test_suite.cpp  hash_test_suite.cpp  helper_test_suite.cpp  optional_tests.cpp  path_test_suite.cpp  timedelta_test_suite.cpp  uri_test_suite.cpp  value_with_default_tests.cpp  variant_tests.cpp
tests/workbook/: named_range_test_suite.cpp  serialization_test_suite.cpp  workbook_test_suite.cpp
tests/worksheet/: cell_iterator_test_suite.cpp  cell_vector_test_suite.cpp  page_setup_test_suite.cpp  range_test_suite.cpp  worksheet_test_suite.cpp  worksheet_view_test_suite.cpp
(+216 files in other folders)
